# ai-for-sim-ustc-cg26

./: .gitignore  LICENSE  README.md  ai4s-cg-26.pptx  pyproject.toml  requirements.txt
00-discrete-solver/: README.md  export.py
01-implicit-neural-representation/: README.md  export_hybrid.py  export_physics.py  export_supervised.py  simulate.py  train_hybrid.py  train_physics.py  train_supervised.py
02-e2e-multitrajectory/: README.md  export_hybrid.py  export_supervised.py  simulate.py  train_hybrid.py  train_supervised.py
02-e2e-solver/: README.md  export_hybrid.py  export_supervised.py  simulate.py  train_hybrid.py  train_supervised.py
03-ai-aided-preconditioner/: README.md  export.py  simulate.py  train.py
03-ai-aided-warmup/: README.md  export.py  simulate.py  train.py
src/ai_for_sim/: __init__.py  aided_preconditioner.py  aided_solver.py  double_pendulum.py  e2e_solver.py  inr.py  paths.py  visualize.py
tests/: test_aided_preconditioner.py  test_aided_solver.py  test_double_pendulum.py  test_e2e_solver.py  test_inr_demo.py
